2003-07-14 Christian Schaller <Uraeus@gnome.org>
	
	* Change version to 0.3
	* Add new and updated Nuvola icons from David Vignoni
	* Fix many BlueSphere icons to use userspaceonuse instead 
	  of objectboundingbox

2003-07-13 Christian Schaller <Uraeus@gnome.org>

	* Added updated and new icons to Nuvola from David
	* Added symlinks to Nuvola for better coverage
	* Added file manager, favorites, my-computer icon to Wasp
	* Cleaned up symlink scripts in Makefiles
	* Commented out Amaranth as it will not be part of 0.2
	
2003-07-11 Christian Schaller <Uraeus@gnome.org>

	* Added Amaranth theme (alpha version)
	* Add apps directory to Lush theme
	* Add extra icon to Wasp theme

2003-07-10 Christian Schaller <Uraeus@gnome.org>

	* Added almost complete GNOME menu set to Nuvola
	* Added abiword mime type to Lush and Nuvola
	* Added Wasp multimedia menu icon
	* Cleaned up Wasp apps menu icons somewhat

2003-07-08 Christian Schaller <Uraeus@gnome.org>

	* Removed mid-stop point info from most icons, 
	  should reduce spew considerably, fix by
	  Adam Hooper
	* Traditional Chinese translation by baddog

2003-07-07 Christian Schaller <Uraeus@gnome.org>
	
	* Add print-preview icon to Nuvola

2003-07-02  Artur Flinta  <aflinta@cvs.gnome.org>

	* configure.in: Added pl to ALL_LINGUAS

2003-06-18  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added Turkish ("tr") to the languages' list.

2003-06-18  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added fr to ALL_LINGUAS.

2003-06-13  Gil "Dolfin" Osher <dolfin@rpg.org.il>

	* configure.in: Added he to ALL_LINGUAS.

2003-06-11  Christian Schaller <Uraeus@gnome.org>

	* Add new Evolution and printer icons to Nuvola
	* Ugly kludge fix to Wasp wm theme
	* Re-instate the symlinks for Gorilla
	* Fix so Nuvola gnome-logo pops up in menu
	* Removed Galaxy from build, nothing uses it anymore

2003-06-10  Christian Schaller <Uraeus@gnome.org>

	* Add many new stock and app icons to Wasp