@@ -1,3 +1,8 @@
+2003-07-15  Jakub Steiner <jimmac@ximian.com>
+
+	* Gorilla/metacity-1/metacity-theme-1.xml: add button prelight
+	  states
+
 2003-07-14 Christian Schaller <Uraeus@gnome.org>
 	
 	* Change version to 0.3
